0.22.1:
- disableOutputs() will return false, if called on a running motor with
  autoEnable set to true
- esp32: replace pcnt_counter_clear() by preprocessor-directive in relation to issue #55
- esp32: put const table into RAM due to issue #55

0.22.0:
- Internal code clean up/polishing
- replace getPeriodAfterCommandsCompleted() by
	getPeriodInUsAfterCommandsCompleted() and getPeriodInTicksAfterCommandsCompleted()
- StepperDemo outputs for a running motor the period in us and in ticks

0.21.4:
- PoorManFloat changed from 8bit to 9bit mantissa (implicit msb=1)
   => speed steps with acceleration=1 hardly noticeable
- PoorManFloat new functions for reciprocal calculations

0.21.3:
-  Unidirectional mode: moveByAcceleration() with negative values has used previous acceleration till stop

0.21.2:
- Two new API functions: setSpeedInTicks() and getSpeedInTicks()
- setSpeedInHz() and setSpeedInMilliHz() uses higher resolution than us
- esp32: the spare pulse counter attached to a stepper can now be configured and cleared.
- StepperDemo extended:
	- esp32 only: Add command p<n>,<l>,<h> to configure limits for attached pulse counter
	- esp32 only: Add command pc to clear an attachedPulseCounter
	- H<speed>: Set the speed in Steps/s
- Revert change in 0.21.0 for better resolution of calculate ramp speed => new more tests
- Fix bugs in clipping code, which has caused speed jumps
- Ensure no illegal command in coasting after acceleration change

0.21.1:
- RampGenerator uses now the delayed start feature of the queue
- Fix invalid command generated due to upm calculation tolerance at higher speed

0.21.0:
- StepperDemo extended with test sequence 10 for issue #44
- avr: Avoid ClearInterruptFlag() in ISR, which is needed by simavr due to implementation bug
- eliminate need for FOC workaround by updated simavr
- Better resolution of calculate ramp speed to reduce steps of constant speed while accelerating or decelerating.
  Cost is slower execution of ramp generation.