@@ -268,7 +268,6 @@ See [changelog](https://github.com/gin66/FastAccelStepper/blob/master/CHANGELOG)
 
 ## ISSUES
 
-* esp32: getCurrentPosition() does not take into account the current pulses, because the pulse counter is not read
 * There is an issue with the esp32 mcpwm: as soon as the mcpwm timer is running on every cycle an interrupt is serviced - even though no interrupt is enabled. If several steppers are running at high step rate, the interrupt load for this nonsense interrupt could be quite high for the CPU. Need further investigation, but till now haven't found the root cause.
 
 ## Error investigation
